# Lv490_Logger

./: README.md
CLion_CMake_Linux/Logger/: CMakeLists.txt  README.txt
CLion_CMake_Linux/Logger/src/: filelogger.cpp  filelogger_Messages.cpp
VisualStudio_MSVC_Windows/: LoggerDLL.h  LoggerLibrary.vcxproj  LoggerLibrary.vcxproj.filters
src/: LogFundamentals.cpp  filelogger_FileManager.cpp  library.cpp
